# smart-scarecrow

./: .gitignore  .gitmodules  README.md
bounding-box-maker/: README.md  app.py  boxes_csv_handle.py  dataset_preprocess.py  requirements.txt  work_distribution.py  wsgi.py
bounding-box-maker/datasets/: README.md
bounding-box-maker/static/scripts/: image-boxes.js
bounding-box-maker/templates/: final.html  index.html  task.html
esp32-tasks/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32-tasks/main/: CMakeLists.txt  udp_client.c
esp32-tasks/servo_control/: CMakeLists.txt  servo_controller.c  servo_controller.h
esp32-tasks/tcp_server/: CMakeLists.txt  tcp_servo_control.c  tcp_servo_control.h
esp32-tasks/udp-client/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32-tasks/udp-client/UDP_sockets/: CMakeLists.txt  udp_socket.c  udp_socket.h
esp32-tasks/udp-client/main/: CMakeLists.txt  Kconfig.projbuild  udp_client.c
esp32-tasks/udp-client/servo_control/: CMakeLists.txt  servo_controller.c  servo_controller.h
esp32-tasks/udp-client/udp_client/: CMakeLists.txt  udp_socket.c
esp32-tasks/udp-client/wifi_conn/: CMakeLists.txt  wifi_connection.c  wifi_connection.h
esp32-tasks/udp_client/: CMakeLists.txt  udp_socket.c
esp32-tasks/wifi_conn/: wifi_connection.c
tcp-socket-client/: TCP_client.py
udp-socket-server/: UDP_client.py  UDP_server.py  main.py
